fixed some layout shift

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,13 +1,13 @@
 .header {
   position: fixed;
-  z-index: 9999;
+  z-index: 3;
   top: 0;
   left: 0;
   right: 0;
 }
 
 .headertop {
-  padding: 0.5em 0;
+  padding: 0.5em 0.1em;
   background: var(--clr-accent);
 }
 @media screen and (max-width: 600px) {
@@ -39,19 +39,22 @@
   color: white;
   font-size: 1.5em;
   font-weight: 600;
+  width: 289.27px;
+  height: 36px;
 }
 
 .phone_container {
   display: flex;
   gap: 4em;
   align-items: center;
+  width: 436.52px;
+  height: 37px;
 }
 .phone_container .navLinkTop{
   font-weight: bolder;
   font-size: 22px;
 }
 .navLinkTop {
-
   text-decoration: none;
   text-transform: uppercase;
   font-size: var(--fs-b);
@@ -59,12 +62,10 @@
   color: var(--txt-light);
   letter-spacing: 0.1em;
   transition: all 0.25s linear;
-
   // aligning text with icon
   display: flex;
   align-items: center;
   gap: 2px;
-
   :hover,
   :focus {
     opacity: 0.7;
@@ -74,32 +75,24 @@
 .headerbottom {
   background: var(--clr-dark);
   padding: 1em 0 0.4em 0;
-  width: 100%;
-  height: 78px;
 }
 
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-
-  width: 85%;
-  margin: 0 auto;
-  max-width: 95rem;
 }
 
 .containerTop {
-  width: 90%;
   margin: 0 auto;
   max-width: 95rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .logoContainer {
   img {
-    // height: 70px;
     transition: 0.4s;
 
     &[data-active="true"] {
