--- a/components/MainServices/MainServices.module.scss
+++ b/components/MainServices/MainServices.module.scss
@@ -1,6 +1,6 @@
 .text {
   max-width: 90ch;
-  width: 100%;
+  // width: 100%;
 }
 
 .grid {
